--- a/.classpath
+++ b/.classpath
@@ -14,5 +14,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v8.0-main"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/hibernate-jconsole-1.0.7.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/hibernate-jmx-3.5.6-Final.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
